--- a/css/carta.css
+++ b/css/carta.css
@@ -23,6 +23,7 @@
     perspective: 150rem;
     margin-top: 15px;
     margin-bottom: 15px;
+    align-content: center;
 }
 
 .carta{
@@ -120,14 +121,6 @@
     animation: parpadearTexto 1.5s infinite;
 }
 
-.mas-de-6-cartas-tablero{
-    max-width: 100%;
-}
-
-.mas-de-6-cartas-aciertos{
-    flex-wrap: wrap;
-}
-
 @media (max-width: 370px){
     .tablero-cartas{
         width: 100%;
@@ -149,7 +142,7 @@
 }
 
 /*Escritorio*/
-@media all and ( min-width: 768px ){
+/*@media all and ( min-width: 768px ){
     .zona-tablero{
         flex-direction: row;
         justify-content: center;
@@ -161,9 +154,7 @@
         flex: 1;
     }
     .tablero-cartas{
-        /*width: 80%;*/
         flex: 8;
-        /* width de .carta * 4 + margin de .carta * 8 */
         max-width: calc(13rem*4 + 1rem*8);
     }
     .carta{
@@ -180,10 +171,11 @@
         width: 7rem;
         height: 9.73rem;
     }
-}
+}*/
 
 /*Tablet*/
-@media all and ( min-width: 600px ) and ( max-width: 768px ){
+/*@media all and ( min-width: 600px ) and ( max-width: 768px ){*/
+@media all and ( min-width: 600px ){
     .zona-tablero{
         flex-direction: column;
         justify-content: center;
@@ -199,7 +191,7 @@
         height: 12.51rem;
     }
     .acierto-card{
-        margin: 0 .5rem;
+        margin: 2px .5rem;
         width: 7rem;
         height: 9.73rem;
     }
@@ -221,5 +213,20 @@
     }
     100%{
         opacity: .2;
+    }
+}
+.mas-de-6-cartas-tablero{
+    max-width: 100%;
+}
+
+.mas-de-6-cartas-aciertos{
+    flex-wrap: wrap;
+}
+
+/*Escritorio*/
+@media all and ( min-width: 768px ){
+    .tablero-cartas{
+        max-width: 80%;
+        margin: 2rem auto;
     }
 }
